# routes/api.php
@@ -3,16 +3,6 @@
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
-/*
-|--------------------------------------------------------------------------
-| API Routes
-|--------------------------------------------------------------------------
-|
-| Here is where you can register API routes for your application. These
-| routes are loaded by the RouteServiceProvider and all of them will
-| be assigned to the "api" middleware group. Make something great!
-|
-*/
 
 Route::middleware('auth:api')->get('/user', function (Request $request) {
     return $request->user();
@@ -36,6 +26,9 @@ Route::prefix('v1')->group(function () {
 
         // Afficher un compte spécifique
         Route::get('comptes/{compte}', [CompteController::class, 'show'])->name('comptes.show');
+
+        // Modifier un compte
+        Route::put('comptes/{compte}', [CompteController::class, 'update'])->name('comptes.update');
 
         // Supprimer un compte (soft delete)
         Route::delete('comptes/{compte}', [CompteController::class, 'destroy'])->name('comptes.destroy');
